Summary of changes since version 2.0.5:
--------------------------------------

  * tmpnam now takes two optional arguments, DIR, and PREFIX.  For
    example, tmpnam ("/foo", "bar-") returns a file name like
    "/foo/bar-10773baa".  If DIR is omitted or empty, the value of the
    environment variable TMPDIR, or /tmp is used.  If PREFIX is 
    omitted, "oct-" is used.

  * The built-in variable PWD has been removed.  If you need to get
    the value of the current working directory, use the pwd() function
    instead.

  * New operators.  Octave's parser now recognizes the following
    operators:  << >> += -= *= /= .+= .-= .*= ./= &= |= <<= >>=.  So
    far, there are only a few operations defined that actually use
    them (this should change before 2.1 is released).

  * New built-in data types:

    logical:

      A true value is represented by 1, and false value by 0.
      Comparison operations like <, <=, ==, >, >=, and != now return
      logical values.  Indexing operations that use zero-one style
      indexing must now use logical values.  You can use the new
      function logical() to convert a numeric value to a logical
      value.  This avoids the need for the built-in variable
      `prefer_zero_one_indexing', so it has been removed.  Logical
      values are automatically converted to numeric values where
      appropriate.

    file:

      A file object represents an open Octave stream object.  The
      fopen function now returns a file object instead of an integer.
      File objects can be converted to integers automatically, and the
      other functions that work with file ids still work with
      integers, so this change should be backward compatible.

      The binary left-shift operator `<<' has been defined to work as
      in C++ for file objects and built-in types.  For example,

        my_stream = fopen ("foo", "w");
        my_stream << "x = " << pi << " marks the spot\n";
