@@ -1,13 +1,21 @@
 Summary of changes since version 2.0.5:
 --------------------------------------
 
+  * New built-in variable `print_rhs_assign_val' controls what is
+    printed when an assignment expression is evaluated.  If it is
+    zero, the value of the variable on the left hand side (after the
+    assignment) is printed.  Nonzero, the value of the right hand side
+    (i.e., the result of the expression) is printed.  The default
+    value of is zero, so the behavior is the same as in previous
+    versions of Octave.
+
   * tmpnam now takes two optional arguments, DIR, and PREFIX.  For
     example, tmpnam ("/foo", "bar-") returns a file name like
     "/foo/bar-10773baa".  If DIR is omitted or empty, the value of the
     environment variable TMPDIR, or /tmp is used.  If PREFIX is 
     omitted, "oct-" is used.
 
-  * The built-in variable PWD has been removed.  If you need to get
+  * The built-in variable `PWD' has been removed.  If you need to get
     the value of the current working directory, use the pwd() function
     instead.
 
